# llm-drug-discovery-agent

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_environment.py  tox.ini
docs/: Makefile  conf.py  getting-started.rst  index.rst  make.bat
models/: featurizer_state_dict.yml  scaler.pkl  sklearn_model.pkl
notebooks/: example_agent_run.ipynb  train_predictive_model.ipynb
src/drug_discovery_agent/: agent.py
src/models/: molecular_sklearn_regressor.py
